# cluster-api-provider-azure

./: Dockerfile  Gopkg.toml
cmd/clusterctl/: BUILD  main.go
cmd/manager/: BUILD  main.go
pkg/apis/azureprovider/v1alpha1/: BUILD  azuremachineproviderconfig_types.go
pkg/cloud/azure/actuators/: BUILD.bazel  azure_auth.go  machine_scope.go
pkg/cloud/azure/actuators/machine/: BUILD.bazel  actuator.go  actuator_test.go  reconciler.go
pkg/cloud/azure/converters/: vm.go
pkg/cloud/azure/services/groups/: groups.go
pkg/cloud/azure/services/internalloadbalancers/: internalloadbalancers.go
pkg/cloud/azure/services/managedidentities/: BUILD.bazel  managedIdentities.go  service.go
pkg/cloud/azure/services/networkinterfaces/: networkinterfaces.go
pkg/cloud/azure/services/publicips/: publicips.go
pkg/cloud/azure/services/publicloadbalancers/: publicloadbalancers.go
pkg/cloud/azure/services/routetables/: routetables.go
pkg/cloud/azure/services/securitygroups/: securitygroups.go
pkg/cloud/azure/services/subnets/: subnets.go
pkg/cloud/azure/services/virtualmachineextensions/: virtualmachineextensions.go
pkg/cloud/azure/services/virtualmachines/: BUILD.bazel  virtualmachines.go
pkg/cloud/azure/services/virtualnetworks/: virtualnetworks.go
